--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MemoruTest1"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY" />
+
         <activity
             android:name=".ActivitySettings"
             android:exported="false">
@@ -22,9 +26,9 @@
         <activity
             android:name=".ActivityLogIn"
             android:exported="true">
-
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
 
@@ -56,9 +60,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="false">
-
-
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
