--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.MemoruTest1"
         tools:targetApi="31">
         <activity
+            android:screenOrientation="portrait"
             android:name=".ActivityFAQ"
             android:exported="false">
             <meta-data
@@ -20,6 +21,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".ActivityViewReceipt"
             android:exported="false">
             <meta-data
@@ -27,6 +29,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".ActivityMyGrid"
             android:exported="false">
             <meta-data
@@ -39,6 +42,7 @@
             android:value="YOUR_API_KEY" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".ActivitySettings"
             android:exported="false">
             <meta-data
@@ -46,6 +50,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".ActivityLogIn"
             android:exported="true">
             <intent-filter>
@@ -66,6 +71,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".ActivityMyItems"
             android:exported="false">
             <meta-data
@@ -73,6 +79,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".ActivityAddItem"
             android:exported="false">
             <meta-data
@@ -80,6 +87,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:exported="false">
             <meta-data
@@ -87,6 +95,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".ActivityLicense"
             android:exported="false">
             <meta-data
